[gd_scene load_steps=9 format=3 uid="uid://6fbue4oseisi"]

[ext_resource type="Script" uid="uid://bdthm8pe0p1bo" path="res://Coche/coche.gd" id="1_55gm1"]
[ext_resource type="Texture2D" uid="uid://cy054lmjw2xrw" path="res://Coche/rueda.png" id="1_k7xtg"]
[ext_resource type="Texture2D" uid="uid://be7upr8sviq0r" path="res://Coche/ibiza.png" id="1_odml6"]
[ext_resource type="Texture2D" uid="uid://dgqlpen1th2v3" path="res://Coche/smoke_puff.png" id="4_2c6j6"]
[ext_resource type="Script" path="res://Coche/exhaust_smoke.gd" id="4_8fi16"]

[sub_resource type="Gradient" id="Gradient_55gm1"]
colors = PackedColorArray(0.30138955, 0.30138952, 0.30138952, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8fi16"]
gradient = SubResource("Gradient_55gm1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2c6j6"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
color = Color(0.92941177, 0.92941177, 0.92941177, 0.61960787)
color_ramp = SubResource("GradientTexture1D_8fi16")

[node name="Coche" type="Node2D"]
script = ExtResource("1_55gm1")

[node name="WheelFront" type="Sprite2D" parent="."]
position = Vector2(-391.0702, 111.92972)
rotation = -1.9093902
scale = Vector2(0.20456833, 0.20456833)
texture = ExtResource("1_k7xtg")

[node name="WheelRear" type="Sprite2D" parent="."]
position = Vector2(437.92993, 108.92978)
scale = Vector2(0.20456833, 0.20456833)
texture = ExtResource("1_k7xtg")

[node name="ExhaustSmoke" type="GPUParticles2D" parent="."]
position = Vector2(-524.9998, 100.000015)
scale = Vector2(0.99999994, 0.99999994)
emitting = false
texture = ExtResource("4_2c6j6")
lifetime = 1.2
randomness = 0.5
local_coords = true
process_material = SubResource("ParticleProcessMaterial_2c6j6")
script = ExtResource("4_8fi16")

[node name="Ibiza" type="Sprite2D" parent="."]
position = Vector2(-574, -268)
texture = ExtResource("1_odml6")
centered = false
flip_h = true
